# pid-controller-esp32

./: CMakeLists.txt  pid_emulator.py  script.py
components/as5600/: CMakeLists.txt  as5600.c
components/as5600/include/: as5600.h
main/: CMakeLists.txt  main.c  main.h
main/include/: accel.h  backlash_compensator.h  config.h  encoder.h  motor.h  pid.h  tcp_server.h  trigger.h  uart.h  utils.h  wifi_ap.h
main/src/: accel.c  backlash_compensator.c  encoder.c  motor.c  pid.c  tcp_server.c  trigger.c  uart.c  utils.c  wifi_ap.c
old/: old.c  old.h
turret_env/: pyvenv.cfg
